# sudokube

./: .editorconfig  .gitignore  README.md  build.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/config/: colors.rs  mod.rs
cli/src/config/key_binding/: base.rs  mod.rs  navigation.rs
cli/src/display/: box_drawing.rs  mod.rs
cli/src/enums/: mod.rs
cli/src/game/: mod.rs
cli/src/lib/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/error/: mod.rs
core/src/model/: cell.rs  coordinate.rs  enums.rs  grid.rs  mod.rs  sub_grid.rs
