[package]
name = "pqsudoku_cli"
version = "1.0.0"
edition = "2021"
authors = ["Quang Phan <vnphanquang@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqsudoku = { path = "../core" }
clap = "3.0.0-beta.5"
crossterm = "0.22"
