[package]
name = "sudokube_cli"
description = "Sudokube CLI playground"
version = "1.0.0"
edition = "2021"
authors = ["Quang Phan <vnphanquang@gmail.com>"]
repository = "https://github.com/vnphanquang/sudokube/cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudokube = { path = "../core" }
clap = "3.0.0-beta.5"
crossterm = { version = "0.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.11", features = ["macros"] }
serde_yaml = "0.8"
dirs = "4.0"
merge = { git = "https://git.sr.ht/~ireas/merge-rs", branch = "master", revision = "743a04ae" }
