[package]
name = "sudokube"
version = "0.1.0"
edition = "2021"
authors = ["Quang Phan <vnphanquang@gmail.com>"]
repository = "https://github.com/vnphanquang/sudokube/core"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_arrays = "0.1.0"
event-emitter-rs = "0.1.4"
